# anime-recommendation

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  progress.md
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_anime_cache.py  0002_add_cover_image.py  0003_add_search_cache.py  0004_add_tags_to_anime_cache.py
apps/api/src/: config.py  main.py
apps/api/src/agent/: agent.py  runner.py  tools.py
apps/api/src/application/: recommend_service.py
apps/api/src/domain/: exceptions.py  models.py
apps/api/src/infrastructure/: anilist_client.py  anime_repository.py  catalog_service.py  database.py  orm_models.py
apps/api/src/presentation/routers/: recommend.py
apps/api/src/routers/: recommend.py
apps/api/tests/: conftest.py  test_recommend.py  test_repository.py  test_tools.py
apps/web/: biome.json  next.config.ts  package.json  tsconfig.json
apps/web/app/: actions.ts  layout.tsx  page.tsx
apps/web/app/api/recommend/stream/: route.ts
apps/web/components/: PreferencesForm.tsx  RecommendationCard.tsx
apps/web/lib/: api.ts
